feat(): Updated pom to build jar locally.